# magda-reaper

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CLIP_METADATA_SIZE_ANALYSIS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LLMCPP_MODEL_UPDATE.md  LLMCPP_O3_MINI_TEMPERATURE_FIX.md  MAGDA_MCP_COMPLIANCE.md  MAGDA_STATUS.md  MISSING_ACTIONS.md  Makefile  README.md  REAPER_INTEGRATION_DESIGN.md  REFACTORING_ACTION_NAMES.md  RELEASE.md  STATE_FILTERING_PREFERENCES.md  TODO_CLIP_COLOR.md  benchmark_results.json  build_and_test.sh  bump_version.py  check_models.py  codecov.yml  cpp_minimal_reproducible_example.cpp  minimal_reproducible_example.py  mypy.ini  pyproject.toml  test_parameter_filtering.cpp  vcpkg.json
.github/workflows/: ci.yml  cpp-ci.yml  python-ci.yml  release.yml
cpp/: CMakeLists.txt  Makefile  README.md  binary_data.h.in  vcpkg.json
cpp/examples/: CMakeLists.txt  main.cpp
cpp/include/: agent.hpp  prompt_loader.hpp
cpp/include/magda_cpp/: models.h  pipeline.hpp
cpp/include/magda_cpp/agents/: base_agent.h  clip_agent.h  effect_agent.h  midi_agent.h  operation_identifier.h  orchestrator_agent.h  track_agent.h  volume_agent.h
cpp/src/: CMakeLists.txt  agent.cpp  main.cpp  models.cpp  pipeline.cpp  prompt_loader.cpp
cpp/src/agents/: base_agent.cpp  clip_agent.cpp  effect_agent.cpp  midi_agent.cpp  operation_identifier.cpp  orchestrator_agent.cpp  track_agent.cpp  volume_agent.cpp
cpp/tests/: CMakeLists.txt  test_agents.cpp  test_integration.cpp  test_pipeline.cpp
docs/: JSFX_EDITOR.md  LFO_AUTOMATION_SPEC.md  PARAM_ALIAS_SYSTEM.md  PLAN_UNIFIED_MODIFIER_SYSTEM.md  README.md
include/: magda_actions.h  magda_api_client.h  magda_api_server.h  magda_auth.h  magda_bounce_workflow.h  magda_chat_window.h  magda_drum_mapping_window.h  magda_dsp_analyzer.h  magda_imgui_chat.h  magda_imgui_login.h  magda_imgui_mix_analysis_dialog.h  magda_imgui_plugin_window.h  magda_imgui_settings.h  magda_jsfx_editor.h  magda_login_window.h  magda_param_mapping.h  magda_param_mapping_window.h  magda_plugin_scanner.h  magda_plugin_window.h  magda_settings_window.h  reaper_api_wrapper.h
include/analysis/: magda_bounce_workflow.h  magda_dsp_analyzer.h
include/api/: magda_api_client.h  magda_auth.h
include/core/: magda_executor.h  magda_state.h  reaper_api_wrapper.h  reaper_extension.h
include/dsl/: magda_actions.h  magda_dsl_context.h
include/plugins/: magda_drum_mapping.h  magda_param_mapping.h  magda_plugin_scanner.h
include/ui/: magda_chat_window.h  magda_drum_mapping_window.h  magda_imgui_api_keys.h  magda_imgui_chat.h  magda_imgui_login.h  magda_imgui_mix_analysis_dialog.h  (+5 more)
magda/: context_manager.py  main.py  models.py  pipeline.py
python/: README.md  analyze_benchmark_results.py  build.py  check_responses_models.py  env.example  mkdocs.yml  pyproject.toml  pytest.ini  run_model_benchmark.py  sample_data_20250714_095532.json  test_direct.py
python/benchmarks/: README.md  analyze_benchmark.py  analyze_operations.py  benchmark_results_20250714_214428.json  model_performance_results.json  operations_benchmark_results_20250714_220415.json  operations_benchmark_results_20250714_221407.json  test_benchmark_offline.py  test_complexity_benchmark.py  test_complexity_detection.py  test_complexity_improvement.py  test_operations_benchmark.py
python/docs/: about.md  index.md  quickstart.md
python/docs/api/: agents.md  core.md  domains.md  pipeline.md
python/docs/development/: architecture.md  contributing.md
python/docs/examples/: basic_usage.md  domain_agnostic.md
python/examples/: README.md  basic_usage.py  example_domain_agnostic.py
python/magda/: __init__.py  config.py  context_manager.py  main.py  models.py  pipeline.py  prompt_loader.py  utils.py
python/magda/agents/: base.py  clip_agent.py  effect_agent.py  midi_agent.py  operation_identifier.py  orchestrator_agent.py  track_agent.py  volume_agent.py
python/magda/complexity/: __init__.py  semantic_detector.py
python/magda/core/: domain.py  pipeline.py
python/magda/domains/daw/: __init__.py  daw_agents.py  daw_factory.py
python/scripts/: README.md  analyze_model_results.py  capture_samples.py  check_available_models.py  debug_clip.py  run_model_performance_tests.py
python/tests/: __init__.py  conftest.py  test_agents.py  test_context_awareness.py  test_fast_path.py  test_integration.py  test_japanese_debug.py  test_midi_isolated.py  test_midi_simple.py  test_model_performance.py  test_models.py  test_offline_loading.py  test_pipeline.py  test_semantic_integration.py  test_simple_integration.py
reaper/: .clang-format  ACTION_DESIGN.md  ACTION_TRANSLATION_EXAMPLE.cpp  API_WRAPPER_DESIGN.md  CMakeLists.txt  MAGDA_API_FORMAT.md  Makefile  OO_API_DESIGN.md  README.md  test_login.cpp
reaper/include/: magda_actions.h  magda_api_client.h  magda_api_server.h  magda_auth.h  magda_chat_window.h  magda_login_window.h  magda_state.h  media_item.h  project.h  reaper_extension.h  track.h
reaper/src/: magda_actions.cpp  magda_api_client.cpp  magda_auth.cpp  magda_chat_resource.h  magda_chat_window.cpp  magda_env.cpp  magda_env.h  magda_executor.cpp  magda_http_server.cpp  magda_login_window.cpp  magda_state.cpp  main.cpp
scripts/: release.py
specs/: IMGUI_CHAT_SPEC.md
src/: magda_actions.cpp  magda_api_client.cpp  magda_auth.cpp  magda_bounce_workflow.cpp  magda_chat_resource.h  magda_chat_window.cpp  magda_drum_mapping.cpp  magda_dsp_analyzer.cpp  magda_env.cpp  magda_env.h  magda_executor.cpp  magda_imgui_chat.cpp  magda_imgui_login.cpp  magda_imgui_mix_analysis_dialog.cpp  magda_imgui_plugin_window.cpp  magda_imgui_settings.cpp  magda_jsfx_editor.cpp  magda_login_resource.h  magda_login_window.cpp  magda_param_mapping_window.cpp  magda_plugin_resource.h  magda_plugin_scanner.cpp  magda_plugin_window.cpp  magda_settings_window.cpp  magda_state.cpp  main.cpp
test_data/: plugins.json
tests/: README.md  integration_test.lua  magda_integration_test.lua  run_tests.sh  run_unit_tests.sh  simple_test.lua
tests/unit/: CMakeLists.txt  test_dsl_parser.cpp  test_json_parsing.cpp
(+62 files in other folders)
